Added recipe catagories
Added BASIC GRANOLA recipe, modified how gradients work, redefined universe urls

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -1,177 +1,279 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title>Phantom by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/recipes.css" />
-	</head>
-	<body>
-		<!-- Wrapper -->
-			<div id="wrapper">
-				<!-- Header -->
-					<header id="header" class="backy">
-						<div class="inner">
 
-							<!-- Logo -->
-							<header>
-									<h1>A catalouge of healthy recipes. Choose, make, eat, easy.</h1>
-									<ul class="actions">
-											<li><a href="#firsty" class="button next scrolly">Get Started</a></li>
-										</ul>
-							</header>
-						</div>
-					</header>
+<head>
+    <title>Recipes</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/css/recipes.css" />
+</head>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+<body>
+    <!-- Wrapper -->
+    <div id="wrapper">
+        <!-- Header -->
+        <header id="header" class="backy">
+            <div class="inner">
+
+                <!-- Logo -->
+                <header>
+                    <h1>A catalouge of healthy recipes. Choose, make, eat, easy.</h1>
+                    <ul class="actions">
+                        <li><a href="#breakfast" class="button next scrolly">Breakfast</a></li>
+                        <li><a href="#lunch" class="button next scrolly">Lunch</a></li>
+                        <li><a href="#dinner" class="button next scrolly">Dinner</a></li>
+                        <li><a href="#sides" class="button next scrolly">Sides</a></li>
+                        <li><a href="#desserts" class="button next scrolly">Desserts</a></li>
+                    </ul>
+                </header>
+            </div>
+        </header>
+
+        <!-- Main -->
+        <div id="main">
+            <div class="inner">
+
+                <h1>Breakfast</h1>
+                <section class="tiles">
+                    <article class="breakfast1">
+                        <span class="image">
+										<img src="images/basic-granola.jpg" alt="" />
 									</span>
-									<a href="chicken-salad-lettuce-wraps.html">
-										<h2>Chicken Salad Lettuce Wraps</h2>
-										<div class="content">
-											<p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
+                        <a href="chicken-salad-lettuce-wraps.html">
+                            <h2>Basic Granola</h2>
+                            <div class="content">
+                                <p>Of course, granola is so adaptable! Just add in some nuts or fruit, or even cocoa to add some chocolate.</p>
+                            </div>
+                        </a>
+					</article>
+                    <article class="style2">
+                        <span class="image">
 										<img src="images/potato-kale-bacon-hash.jpg" alt="" />
 									</span>
-									<a href="potato-kale-bacon-hash.html">
-										<h2>Potato Bacon Kale Hash</h2>
-										<div class="content" id="firsty">
-											<p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
+                        <a href="potato-kale-bacon-hash.html">
+                            <h2>Potato Bacon Kale Hash</h2>
+                            <div class="content">
+                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="style3">
+                        <span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-							</section>
-						</div>
-					</div>
-			</div>
+                        <a href="generic.html">
+                            <h2>Feugiat</h2>
+                            <div class="content" id="breakfast">
+                                <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                            </div>
+						</a>
+                    </article>
+                </section>
+                <br/>
+                <br/>
 
-		<!-- Scripts -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-	</body>
+                <h1>Lunches</h1>
+                <section class="tiles">
+                    <article class="lunch1">
+                        <span class="image">
+											<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+										</span>
+                        <a href="chicken-salad-lettuce-wraps.html">
+                            <h2>Chicken Salad Lettuce Wraps</h2>
+                            <div class="content">
+                                <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                            </div>
+                        </a>
+					</article>
+                    <article class="style2">
+                        <span class="image">
+											<img src="images/potato-kale-bacon-hash.jpg" alt="" />
+										</span>
+                        <a href="potato-kale-bacon-hash.html">
+                            <h2>Potato Bacon Kale Hash</h2>
+                            <div class="content" id="firsty">
+                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="style3">
+                        <span class="image">
+											<img src="images/pic03.jpg" alt="" />
+										</span>
+                        <a href="generic.html">
+                            <h2>Feugiat</h2>
+                            <div class="content" id="lunch">
+                                <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                            </div>
+                        </a>
+					</article>
+                    <article class="style1">
+							<span class="image">
+												<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+											</span>
+							<a href="chicken-salad-lettuce-wraps.html">
+								<h2>Chicken Salad Lettuce Wraps</h2>
+								<div class="content">
+									<p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+								</div>
+							</a>
+						</article>
+						<article class="style2">
+							<span class="image">
+												<img src="images/potato-kale-bacon-hash.jpg" alt="" />
+											</span>
+							<a href="potato-kale-bacon-hash.html">
+								<h2>Potato Bacon Kale Hash</h2>
+								<div class="content" id="firsty">
+									<p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+								</div>
+							</a>
+						</article>
+						<article class="style3">
+							<span class="image">
+												<img src="images/pic03.jpg" alt="" />
+											</span>
+							<a href="generic.html">
+								<h2>Feugiat</h2>
+								<div class="content" id="lunch">
+									<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+								</div>
+							</a>
+						</article>
+				</section>
+                <br/>
+                <br/>
+
+                <h1>Dinner</h1>
+                <section class="tiles">
+                    <article class="style1">
+                        <span class="image">
+												<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+											</span>
+                        <a href="chicken-salad-lettuce-wraps.html">
+                            <h2>Chicken Salad Lettuce Wraps</h2>
+                            <div class="content">
+                                <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="style2">
+                        <span class="image">
+												<img src="images/potato-kale-bacon-hash.jpg" alt="" />
+											</span>
+                        <a href="potato-kale-bacon-hash.html">
+                            <h2>Potato Bacon Kale Hash</h2>
+                            <div class="content" id="firsty">
+                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="style3">
+                        <span class="image">
+												<img src="images/pic03.jpg" alt="" />
+											</span>
+                        <a href="generic.html">
+                            <h2>Feugiat</h2>
+                            <div class="content">
+                                <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                            </div>
+                        </a>
+                    </article>
+                </section>
+                <br/>
+                <br/>
+
+                <h1>Sides</h1>
+                <section class="tiles">
+                    <article class="style1">
+                        <span class="image">
+													<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+												</span>
+                        <a href="chicken-salad-lettuce-wraps.html">
+                            <h2>Chicken Salad Lettuce Wraps</h2>
+                            <div class="content">
+                                <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="style2">
+                        <span class="image">
+													<img src="images/potato-kale-bacon-hash.jpg" alt="" />
+												</span>
+                        <a href="potato-kale-bacon-hash.html">
+                            <h2>Potato Bacon Kale Hash</h2>
+                            <div class="content" id="firsty">
+                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="style3">
+                        <span class="image">
+													<img src="images/pic03.jpg" alt="" />
+												</span>
+                        <a href="generic.html">
+                            <h2>Feugiat</h2>
+                            <div class="content">
+                                <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                            </div>
+                        </a>
+                    </article>
+                </section>
+                <br/>
+				<br/>
+				
+				<h1>Desserts</h1>
+                <section class="tiles">
+                    <article class="style1">
+                        <span class="image">
+											<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+										</span>
+                        <a href="chicken-salad-lettuce-wraps.html">
+                            <h2>Chicken Salad Lettuce Wraps</h2>
+                            <div class="content">
+                                <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="style2">
+                        <span class="image">
+											<img src="images/potato-kale-bacon-hash.jpg" alt="" />
+										</span>
+                        <a href="potato-kale-bacon-hash.html">
+                            <h2>Potato Bacon Kale Hash</h2>
+                            <div class="content" id="firsty">
+                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="style3">
+                        <span class="image">
+											<img src="images/pic03.jpg" alt="" />
+										</span>
+                        <a href="generic.html">
+                            <h2>Feugiat</h2>
+                            <div class="content">
+                                <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                            </div>
+                        </a>
+                    </article>
+                </section>
+                <br/>
+                <br/>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
+
 </html>
