Added several new recipes
Made other fixes, I think.

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -1,7 +1,5 @@
 <!DOCTYPE HTML>
-
 <html>
-
 <head>
     <title>Recipes</title>
     <meta charset="utf-8" />
@@ -18,7 +16,7 @@
 
                 <!-- Logo -->
                 <header>
-                    <h1>A catalouge of healthy recipes. Choose, make, eat, easy.</h1>
+                    <h1>A catalouge of simple, easy, (mostly) healthy recipes. <br/>Choose a time, make it, eat it, easy.</h1>
                     <ul class="actions">
                         <li><a href="#breakfast" class="button next scrolly">Breakfast</a></li>
                         <li><a href="#lunch" class="button next scrolly">Lunch</a></li>
@@ -40,14 +38,14 @@
                         <span class="image">
 										<img src="images/basic-granola.jpg" alt="" />
 									</span>
-                        <a href="chicken-salad-lettuce-wraps.html">
+                        <a href="recipes/basic-granola.html">
                             <h2>Basic Granola</h2>
                             <div class="content">
                                 <p>Of course, granola is so adaptable! Just add in some nuts or fruit, or even cocoa to add some chocolate.</p>
                             </div>
                         </a>
 					</article>
-                    <article class="style2">
+                    <article class="breakfast2">
                         <span class="image">
 										<img src="images/potato-kale-bacon-hash.jpg" alt="" />
 									</span>
@@ -58,14 +56,25 @@
                             </div>
                         </a>
                     </article>
-                    <article class="style3">
+                    <article class="breakfast3">
                         <span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/vanilla-breakfast-cookies.jpg" alt="" />
 									</span>
                         <a href="generic.html">
-                            <h2>Feugiat</h2>
+                            <h2>Vanilla Breakfast Cookies (no bake)</h2>
                             <div class="content" id="breakfast">
-                                <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                <p>Start your morning off like you’re eating dessert…Healthy style.</p>
+                            </div>
+						</a>
+                    </article>
+                    <article class="breakfast4">
+                        <span class="image">
+										<img src="images/Asparagus-Frittata.jpg" alt="" />
+									</span>
+                        <a href="generic.html">
+                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <div class="content">
+                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
                             </div>
 						</a>
                     </article>
