--- a/recipes/recipes/chicken-salad-lettuce-wraps.html
+++ b/recipes/recipes/chicken-salad-lettuce-wraps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>[TITLE]</title>
+		<title>Chicken Salad Lettuce Wraps</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/recipes.css" />
@@ -19,7 +19,7 @@
 							<span class="6u">
 									<h3 id="scolor">Information</h3>
 									<ul class="alt">
-											<li class="">TOTAL TIME: <span id="infoblck">0:15</span> PREP TIME: <span id="infoblck">0:15</span> LEVEL: <span id="infoblck">EASY</span> SERVINGS: <span id="infoblck">4</span></li>
+											<li class="">TOTAL TIME: <span id="infoblck">0:15</span> PREP TIME: <span id="infoblck">0:15</span> COOK TIME: <span id="infoblck">0</span> SERVINGS: <span id="infoblck">4</span></li>
 										</ul>
 									<div class="table-wrapper">
 									<table>
