--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
     <title>Recipes</title>
     <meta charset="utf-8" />
@@ -16,7 +17,7 @@
 
                 <!-- Logo -->
                 <header>
-                    <h1>A catalouge of simple, easy, (mostly) healthy recipes. <br/>Choose a time, make it, eat it, easy.</h1>
+                    <h1>A catalouge of simple, easy, (mostly) healthy recipes. <br/>Choose a meal, make it, eat it, easy.</h1>
                     <ul class="actions">
                         <li><a href="#breakfast" class="button next scrolly">Breakfast</a></li>
                         <li><a href="#lunch" class="button next scrolly">Lunch</a></li>
@@ -44,7 +45,7 @@
                                 <p>Of course, granola is so adaptable! Just add in some nuts or fruit, or even cocoa to add some chocolate.</p>
                             </div>
                         </a>
-					</article>
+                    </article>
                     <article class="breakfast2">
                         <span class="image">
 										<img src="images/potato-kale-bacon-hash.jpg" alt="" />
@@ -60,23 +61,78 @@
                         <span class="image">
 										<img src="images/vanilla-breakfast-cookies.jpg" alt="" />
 									</span>
-                        <a href="generic.html">
+                        <a href="recipes/vanilla-breakfast-cookies.html">
                             <h2>Vanilla Breakfast Cookies (no bake)</h2>
                             <div class="content" id="breakfast">
                                 <p>Start your morning off like you’re eating dessert…Healthy style.</p>
                             </div>
-						</a>
+                        </a>
                     </article>
                     <article class="breakfast4">
                         <span class="image">
 										<img src="images/Asparagus-Frittata.jpg" alt="" />
 									</span>
-                        <a href="generic.html">
+                        <a href="recipes/asparagus-frittata.html">
                             <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
                             <div class="content">
                                 <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
                             </div>
-						</a>
+                        </a>
+                    </article>
+                    <article class="breakfast4">
+                        <span class="image">
+                                            <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                        </span>
+                        <a href="recipes/asparagus-frittata.html">
+                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <div class="content">
+                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="breakfast4">
+                        <span class="image">
+                                                <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                            </span>
+                        <a href="recipes/asparagus-frittata.html">
+                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <div class="content">
+                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="breakfast4">
+                        <span class="image">
+                                                    <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                                </span>
+                        <a href="recipes/asparagus-frittata.html">
+                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <div class="content">
+                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="breakfast4">
+                        <span class="image">
+                                                        <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                                    </span>
+                        <a href="recipes/asparagus-frittata.html">
+                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <div class="content">
+                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="breakfast4">
+                        <span class="image">
+                                                            <img src="images/Asparagus-Frittata.jpg" alt="" />
+                                                        </span>
+                        <a href="recipes/asparagus-frittata.html">
+                            <h2>Asparagus Frittata with Spicy Sausage and Leeks</h2>
+                            <div class="content">
+                                <p>Because almost every veggie tastes better baked with eggs and sausage. </p>
+                            </div>
+                        </a>
                     </article>
                 </section>
                 <br/>
@@ -94,7 +150,7 @@
                                 <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
                             </div>
                         </a>
-					</article>
+                    </article>
                     <article class="style2">
                         <span class="image">
 											<img src="images/potato-kale-bacon-hash.jpg" alt="" />
@@ -116,41 +172,41 @@
                                 <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                             </div>
                         </a>
-					</article>
+                    </article>
                     <article class="style1">
-							<span class="image">
+                        <span class="image">
 												<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
 											</span>
-							<a href="chicken-salad-lettuce-wraps.html">
-								<h2>Chicken Salad Lettuce Wraps</h2>
-								<div class="content">
-									<p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
-								</div>
-							</a>
-						</article>
-						<article class="style2">
-							<span class="image">
+                        <a href="chicken-salad-lettuce-wraps.html">
+                            <h2>Chicken Salad Lettuce Wraps</h2>
+                            <div class="content">
+                                <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="style2">
+                        <span class="image">
 												<img src="images/potato-kale-bacon-hash.jpg" alt="" />
 											</span>
-							<a href="potato-kale-bacon-hash.html">
-								<h2>Potato Bacon Kale Hash</h2>
-								<div class="content" id="firsty">
-									<p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
-								</div>
-							</a>
-						</article>
-						<article class="style3">
-							<span class="image">
+                        <a href="potato-kale-bacon-hash.html">
+                            <h2>Potato Bacon Kale Hash</h2>
+                            <div class="content" id="firsty">
+                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="style3">
+                        <span class="image">
 												<img src="images/pic03.jpg" alt="" />
 											</span>
-							<a href="generic.html">
-								<h2>Feugiat</h2>
-								<div class="content" id="lunch">
-									<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-								</div>
-							</a>
-						</article>
-				</section>
+                        <a href="generic.html">
+                            <h2>Feugiat</h2>
+                            <div class="content" id="lunch">
+                                <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                            </div>
+                        </a>
+                    </article>
+                </section>
                 <br/>
                 <br/>
 
@@ -230,9 +286,9 @@
                     </article>
                 </section>
                 <br/>
-				<br/>
-				
-				<h1>Desserts</h1>
+                <br/>
+
+                <h1>Desserts</h1>
                 <section class="tiles">
                     <article class="style1">
                         <span class="image">
